src/lib/testcases/fails/basic/fn_bad_arg_nb2/main.rk
f a b = a

main = f 2
